--- a/config/config.yaml
+++ b/config/config.yaml
@@ -60,8 +60,8 @@ platforms:
     name: "华尔街见闻"
   - id: "thepaper"
     name: "澎湃新闻"
-  - id: "bilibili-hot-search"
-    name: "bilibili 热搜"
+  - id: "bilibili"
+    name: "哔哩哔哩"
   - id: "cls-hot"
     name: "财联社热门"
   - id: "ifeng"
@@ -74,3 +74,85 @@ platforms:
     name: "抖音"
   - id: "zhihu"
     name: "知乎"
+  - id: "36kr"
+    name: "36氪"
+  - id: "cankaoxiaoxi"
+    name: "参考消息"
+  - id: "chongbuluo"
+    name: "虫部落"
+  - id: "fastbull"
+    name: "FastBull"
+  - id: "gelonghui"
+    name: "格隆汇"
+  - id: "ghxi"
+    name: "果核剥壳"
+  - id: "github"
+    name: "GitHub"
+  - id: "ycombinator"
+    name: "Hacker News"
+  - id: "hupu"
+    name: "虎扑"
+  - id: "ifeng"
+    name: "凤凰网"
+  - id: "ithome"
+    name: "IT之家"
+  - id: "jin10"
+    name: "金十数据"
+  - id: "juejin"
+    name: "稀土掘金"
+  - id: "kaopucdn"
+    name: "靠谱云"
+  - id: ""
+    name: ""
+  - id: ""
+    name: ""
+  - id: ""
+    name: ""
+  - id: ""
+    name: ""
+  - id: ""
+    name: ""
+  - id: ""
+    name: ""
+  - id: ""
+    name: ""
+  - id: ""
+    name: ""
+  - id: ""
+    name: ""
+  - id: ""
+    name: ""
+  - id: ""
+    name: ""
+  - id: ""
+    name: ""
+  - id: ""
+    name: ""
+  - id: ""
+    name: ""
+  - id: ""
+    name: ""
+  - id: ""
+    name: ""
+  - id: ""
+    name: ""
+  - id: ""
+    name: ""
+  - id: ""
+    name: ""
+  - id: ""
+    name: ""
+  - id: ""
+    name: ""
+  - id: ""
+    name: ""
+  - id: ""
+    name: ""
+  - id: ""
+    name: ""
+  - id: ""
+    name: ""
+  - id: ""
+    name: ""
+  - id: ""
+    name: ""
