--- a/config/config.yaml
+++ b/config/config.yaml
@@ -55,7 +55,7 @@ platforms:
   - id: "toutiao"
     name: "今日头条"
   - id: "baidu"
-    name: "百度热搜"
+    name: "百度"
   - id: "wallstreetcn-hot"
     name: "华尔街见闻"
   - id: "thepaper"
@@ -74,7 +74,7 @@ platforms:
     name: "抖音"
   - id: "zhihu"
     name: "知乎"
-  - id: "36kr"
+  - id: "_36kr"
     name: "36氪"
   - id: "cankaoxiaoxi"
     name: "参考消息"
@@ -88,28 +88,26 @@ platforms:
     name: "果核剥壳"
   - id: "github"
     name: "GitHub"
-  - id: "ycombinator"
+  - id: "hackernews"
     name: "Hacker News"
   - id: "hupu"
     name: "虎扑"
-  - id: "ifeng"
-    name: "凤凰网"
   - id: "ithome"
     name: "IT之家"
   - id: "jin10"
     name: "金十数据"
   - id: "juejin"
     name: "稀土掘金"
-  - id: "kaopucdn"
+  - id: "kaopu"
     name: "靠谱云"
-  - id: ""
-    name: ""
-  - id: ""
-    name: ""
-  - id: ""
-    name: ""
-  - id: ""
-    name: ""
+  - id: "kuaishou"
+    name: "快手"
+  - id: "linuxdo"
+    name: "LINUX DO"
+  - id: "mktnews"
+    name: "MKTNews"
+  - id: "nowcoder"
+    name: "牛客网"
   - id: ""
     name: ""
   - id: ""
