--- a/config/config.yaml
+++ b/config/config.yaml
@@ -108,49 +108,7 @@ platforms:
     name: "MKTNews"
   - id: "nowcoder"
     name: "牛客网"
-  - id: ""
-    name: ""
-  - id: ""
-    name: ""
-  - id: ""
-    name: ""
-  - id: ""
-    name: ""
-  - id: ""
-    name: ""
-  - id: ""
-    name: ""
-  - id: ""
-    name: ""
-  - id: ""
-    name: ""
-  - id: ""
-    name: ""
-  - id: ""
-    name: ""
-  - id: ""
-    name: ""
-  - id: ""
-    name: ""
-  - id: ""
-    name: ""
-  - id: ""
-    name: ""
-  - id: ""
-    name: ""
-  - id: ""
-    name: ""
-  - id: ""
-    name: ""
-  - id: ""
-    name: ""
-  - id: ""
-    name: ""
-  - id: ""
-    name: ""
-  - id: ""
-    name: ""
-  - id: ""
-    name: ""
-  - id: ""
-    name: ""
+  - id: "pcbeta"
+    name: "PCbeta"
+  - id: "producthunt"
+    name: "Product Hunt"
