--- a/config/config.yaml
+++ b/config/config.yaml
@@ -56,14 +56,14 @@ platforms:
     name: "今日头条"
   - id: "baidu"
     name: "百度"
-  - id: "wallstreetcn-hot"
+  - id: "wallstreetcn"
     name: "华尔街见闻"
   - id: "thepaper"
     name: "澎湃新闻"
   - id: "bilibili"
     name: "哔哩哔哩"
-  - id: "cls-hot"
-    name: "财联社热门"
+  - id: "cls"
+    name: "财联社"
   - id: "ifeng"
     name: "凤凰网"
   - id: "tieba"
@@ -112,3 +112,19 @@ platforms:
     name: "PCbeta"
   - id: "producthunt"
     name: "Product Hunt"
+  - id: "smzdm"
+    name: "什么值得买"
+  - id: "solidot"
+    name: "奇客资讯网"
+  - id: "sputniknewscn"
+    name: "俄罗斯卫星通讯社"
+  - id: "sspai"
+    name: "少数派"
+  - id: "v2ex"
+    name: "V2EX"
+  - id: "xueqiu"
+    name: "雪球"
+  - id: "zaobao"
+    name: "联合早报中文网"
+  - id: "coolapk"
+    name: "X"
